deployments/sonarr/sonarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: servarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: sonarr-port
