deployments/sonarr/sonarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "sonarr.k3s-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
